feat: header para mobile finalizado

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Yuri V. | Desenvolvedor Front-End</title>
 </head>
 <body>
-    <header>
-        <img src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
-        <h2>Black<strong>Orange</strong></h2>
-        <img src="assets/rosto-emoji.svg" alt="Emoji de rosto">
-    </header>
+    <section class="caixa">
+        <header class="cabecalho">
+            <div class="cabecalho-top">
+                <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
+                <h2 class="cabecalho-top__title">Black<strong>Orange</strong></h2>
+                <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
+            </div>
+            <nav class="cabecalho-navegacao">
+                <ul class="cabecalho-navegacao__list">
+                    <li class="navegacao__list--item">Sobre</li>
+                    <li class="navegacao__list--item">Projetos</li>
+                    <li class="navegacao__list--item">Contato</li>
+                </ul>
+            </nav>
+        </header>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
