--- a/index.html
+++ b/index.html
@@ -22,6 +22,36 @@
                 </ul>
             </nav>
         </header>
+
+        <main class="hidden content">
+            <div class="content-apresentacao">
+                <div class="content-apresentacao__text">
+                    <p class="apresentacao__text--paragrafo">- Olá</p>
+                    <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
+                    <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
+                    <button class="apresentacao__text--buttton">Saiba mais</button>
+                </div>
+                <div>
+                    <nav class="content-links__social">
+                        <div class="content-links__social--info">
+                            <a href="https://github.com/Yuric-Viana" target="_blank">
+                                <img src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
+                            </a>
+                            <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
+                                <img src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
+                            </a>
+                        </div>
+                        <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
+                            <img src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
+                        </a>
+                    </nav>
+                </div>
+            </div>
+            <div class="content-img">
+                <img class="content-img__cubo" src="assets/icons8-cubo-50.png" alt="Cubo">
+                <img class="content-img__icon" src="assets/eu-icone-removebg-preview.png" alt="Eu em ícone">
+            </div>
+        </main>
     </section>
 
     <script src="script.js"></script>
