feat: interface responsiva finalizada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="cabecalho">
             <div class="cabecalho-top">
                 <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
-                <h2 class="cabecalho-top__title">Black<strong>Orange</strong></h2>
+                <h2 class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
                 <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
             </div>
             <nav class="cabecalho-navegacao">
@@ -21,6 +21,7 @@
                     <li class="navegacao__list--item">Contato</li>
                 </ul>
             </nav>
+            <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
         </header>
 
         <main class="hidden content">
@@ -52,6 +53,10 @@
                 <img class="content-img__icon" src="assets/eu-icone-removebg-preview.png" alt="Eu em ícone">
             </div>
         </main>
+        <footer class="hidden rodape">
+            <p>© Todos os direitos reservados
+                Desenvolvido por Yuri V.</p>
+        </footer>
     </section>
 
     <script src="script.js"></script>
