feat: automatizar o tamanho do conteudo no mobile

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <main class="hidden content">
             <div class="content-apresentacao">
                 <div class="content-apresentacao__text">
-                    <p class="apresentacao__text--paragrafo">- Olá</p>
+                    <p class="content-apresentacao__mobile apresentacao__text--paragrafo">- Olá</p>
                     <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
                     <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
                     <button class="apresentacao__text--buttton">Saiba mais</button>
                 </div>
-                <div>
+                <div class="content-links">
                     <nav class="content-links__social">
                         <div class="content-links__social--info">
                             <a href="https://github.com/Yuric-Viana" target="_blank">
