feat: adicionar pagina de sobre mim

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <header class="cabecalho">
             <div class="cabecalho-top">
                 <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
-                <h2 class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
+                <a class="cabecalho-top__link" href="">
+                    <h2 class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
+                </a>
                 <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
             </div>
             <nav class="cabecalho-navegacao">
                 <ul class="cabecalho-navegacao__list">
-                    <li class="navegacao__list--item">Sobre</li>
+                    <a class="cabecalho-navegacao__list--link" href="sobre.html">
+                        <li class="navegacao__list--item">Sobre</li>
+                    </a>
                     <li class="navegacao__list--item">Projetos</li>
                     <li class="navegacao__list--item">Contato</li>
                 </ul>
@@ -59,6 +63,6 @@
         </footer>
     </section>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
