feat: página 'sobre' para a tela 428px finalizada

--- a/sobre.html
+++ b/sobre.html
@@ -47,17 +47,17 @@
                     <div class="main-projetos__item primeiro">
                         <h2 class="projetos__item--title">Pomodoro</h2>
                         <p class="projetos__item--descricao">Site de tarefas com Pomodoro, onde você pode adicionar, editar, completar e remover tarefas.</p>
-                        <button>Visualizar</button>
+                        <button><a href="https://yuric-viana.github.io/fokus-projeto-pomodoro/" target="_blank">Visualizar</a></button>
                     </div>
                     <div class="main-projetos__item segundo">
                         <h2 class="projetos__item--title">PetFrame</h2>
                         <p class="projetos__item--descricao">Upload e pré-visualização de imagens em um app voltado para pets.</p>
-                        <button>Visualizar</button>
+                        <button><a href="https://yuric-viana.github.io/projeto-mundo-pet/" target="_blank">Visualizar</a></button>
                     </div>
                        <div class="main-projetos__item terceiro">
                         <h2 class="projetos__item--title">Anúncio Pro</h2>
                         <p class="projetos__item--descricao">Interface de marketing para promover anúncios pagos de forma criativa.</p>
-                        <button>Visualizar</button>
+                        <button><a href="https://yuric-viana.github.io/modern-website-practice/" target="_blank">Visualizar</a></button>
                     </div>
                     
                 </div>
@@ -74,6 +74,15 @@
                     </div>
                 </div>
             </section>
+
+            <div class="main-skills">
+                <h2 class="main-skills__title">Habilidades</h2>
+                <div class="main-skills__icons">
+                    <p class="skills__icons--item"><img src="assets/icons8-css3.svg" alt="Icone CSS">CSS</p>
+                    <p class="skills__icons--item"><img id="Js" src="assets/icons7-javascript.svg" alt="Icone de JavaScript">JavaScript</p>
+                    <p class="skills__icons--item"><img src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
+                </div>
+            </div>
         </main>
         
         <footer class="hidden rodape">
