fix: corrigir link de terceiro projeto

--- a/sobre.html
+++ b/sobre.html
@@ -55,9 +55,9 @@
                         <button><a href="https://yuric-viana.github.io/projeto-mundo-pet/" target="_blank">Visualizar</a></button>
                     </div>
                        <div class="main-projetos__item terceiro">
-                        <h2 class="projetos__item--title">Anúncio Pro</h2>
-                        <p class="projetos__item--descricao">Interface de marketing para promover anúncios pagos de forma criativa.</p>
-                        <button><a href="https://yuric-viana.github.io/modern-website-practice/" target="_blank">Visualizar</a></button>
+                        <h2 class="projetos__item--title">AluraBooks</h2>
+                        <p class="projetos__item--descricao">Livraria online responsiva com carrossel de lançamentos.</p>
+                        <button><a href="https://yuric-viana.github.io/alurabooks/" target="_blank">Visualizar</a></button>
                     </div>
                     
                 </div>
