feat: responsividade de página 'sobre' finalizada

--- a/sobre.html
+++ b/sobre.html
@@ -30,10 +30,15 @@
 
         <main class="hidden main">
             <div class="main-sobre">
-                <img class="hidden main-sobre__foto" src="assets/foto-pessoal.jpeg" alt="Foto minha">
-                <h2 class="main-sobre__subtitle">Sobre mim</h2>
-                <h1 class="main-sobre__title">Transformando ideias em <strong>experiências digitais</strong></h1>
-                <p class="main-sobre__descricao">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes — sempre pensando na melhor experiência possível para quem navega.</p>
+                <div class="main-sobre__img">
+                    <img class="hidden main-sobre__foto" src="assets/foto-pessoal.jpeg" alt="Foto minha">
+                </div>
+                <div>
+                    <h2 class="main-sobre__subtitle">Sobre mim</h2>
+                    <h1 class="main-sobre__title">Transformando ideias em 
+                        <strong>experiências digitais</strong></h1>
+                    <p class="main-sobre__descricao">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes — sempre pensando na melhor experiência possível para quem navega.</p>
+                </div>
             </div>
             
             <input class="main-btn" type="radio" name="btn-radio" id="radio1">
@@ -78,9 +83,9 @@
             <div class="main-skills">
                 <h2 class="main-skills__title">Habilidades</h2>
                 <div class="main-skills__icons">
-                    <p class="skills__icons--item"><img src="assets/icons8-css3.svg" alt="Icone CSS">CSS</p>
-                    <p class="skills__icons--item"><img id="Js" src="assets/icons7-javascript.svg" alt="Icone de JavaScript">JavaScript</p>
-                    <p class="skills__icons--item"><img src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
+                    <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-css3.svg" alt="Icone CSS">CSS</p>
+                    <p class="skills__icons--item"><img class="skills__icons--img" id="Js" src="assets/icons7-javascript.svg" alt="Icone de JavaScript">JavaScript</p>
+                    <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
                 </div>
             </div>
         </main>
