--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     <nav class="content-links__social">
                         <div class="content-links__social--info">
                             <a href="https://github.com/Yuric-Viana" target="_blank">
-                                <img src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
+                                <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
                             </a>
                             <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
-                                <img src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
+                                <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
                             </a>
                         </div>
                         <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
-                            <img src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
+                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
                         </a>
                     </nav>
                 </div>
