feat: adicionar qualidades e adicionar borda as habilidades

--- a/sobre.html
+++ b/sobre.html
@@ -80,12 +80,47 @@
                 </div>
             </section>
 
-            <div class="main-skills">
-                <h2 class="main-skills__title">Habilidades</h2>
-                <div class="main-skills__icons">
-                    <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-css3.svg" alt="Icone CSS">CSS</p>
-                    <p class="skills__icons--item"><img class="skills__icons--img" id="Js" src="assets/icons7-javascript.svg" alt="Icone de JavaScript">JavaScript</p>
-                    <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
+            <div class="main-info">
+                <div class="main-skills">
+                    <h2 class="main-skills__title">Minhas habilidades</h2>
+                    <div class="main-skills__icons">
+                        <div class="skills__icons--content">
+                            <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-css3.svg" alt="Icone CSS">CSS</p>
+                        </div>
+                        <div class="skills__icons--content">
+                            <p class="skills__icons--item"><img class="skills__icons--img" id="Js" src="assets/icons7-javascript.svg" alt="Icone de JavaScript">JavaScript</p>
+                        </div>
+                        <div class="skills__icons--content">
+                            <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-quality">
+                    <h2 class="main-quality__title">Minhas qualidades</h2>
+                    <div class="main-quality__content">
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Resolução de problemas</p>
+                        </div>
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Trabalho em equipe</p>
+                        </div>
+                    </div>
+                    <div class="main-quality__content">
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Atenção aos detalhes</p>
+                        </div>
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Aprendizado rápido</p>
+                        </div>
+                    </div>
+                    <div class="main-quality__content">
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Comunicação</p>
+                        </div>
+                        <div class="main-quality__item">
+                            <p class="quality__item--text">Adaptabilidade</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
