feat: adicionar link de redes na página 'sobre'

--- a/sobre.html
+++ b/sobre.html
@@ -122,6 +122,19 @@
         </main>
         
         <footer class="hidden rodape">
+             <div class="rodape-links">
+                    <nav class="rodape-links__social">
+                        <a href="https://github.com/Yuric-Viana" target="_blank">
+                            <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
+                        </a>
+                        <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
+                            <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
+                        </a>
+                        <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
+                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
+                        </a>
+                    </nav>
+                </div>
             <p>© Todos os direitos reservados
                 Desenvolvido por Yuri V.</p>
         </footer>
