feat: adicionar mais uma skill

--- a/sobre.html
+++ b/sobre.html
@@ -93,6 +93,9 @@
                         <div class="skills__icons--content">
                             <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-html-5.svg" alt="Icone HTML">HTML</p>
                         </div>
+                        <div class="skills__icons--content">
+                            <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-visual-studio.svg" alt="Icone Vs code">VS Code</p>
+                        </div>
                     </div>
                 </div>
                 <div class="main-quality">
