feat: finalizar página de contato para mobile

--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,9 @@
                         <li class="navegacao__list--item">Sobre</li>
                     </a>
                     <li class="navegacao__list--item">Projetos</li>
-                    <li class="navegacao__list--item">Contato</li>
+                    <a class="cabecalho-navegacao__list--link" href="contato.html">
+                        <li class="navegacao__list--item">Contato</li>
+                    </a>
                 </ul>
             </nav>
             <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
@@ -34,10 +36,10 @@
                     <img class="hidden main-sobre__foto" src="assets/foto-pessoal.jpeg" alt="Foto minha">
                 </div>
                 <div>
-                    <h2 class="main-sobre__subtitle">Sobre mim</h2>
+                    <h2 class="main-sobre__subtitle text">Sobre mim</h2>
                     <h1 class="main-sobre__title">Transformando ideias em 
                         <strong>experiências digitais</strong></h1>
-                    <p class="main-sobre__descricao">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes — sempre pensando na melhor experiência possível para quem navega.</p>
+                    <p class="main-sobre__descricao text">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes — sempre pensando na melhor experiência possível para quem navega.</p>
                 </div>
             </div>
             
