--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                         <li class="navegacao__list--item">Sobre</li>
                     </a>
                     <li class="navegacao__list--item">Projetos</li>
-                    <li class="navegacao__list--item">Contato</li>
+                    <a class="cabecalho-navegacao__list--link" href="contato.html">
+                        <li class="navegacao__list--item">Contato</li>
+                    </a>
                 </ul>
             </nav>
             <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
