--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     <p class="content-apresentacao__mobile apresentacao__text--paragrafo">- Olá</p>
                     <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
                     <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
-                    <button class="apresentacao__text--buttton">Saiba mais</button>
+                    <a href="sobre.html">
+                        <button class="apresentacao__text--buttton">Saiba mais</button>
+                    </a>
                 </div>
                 <div class="content-links">
                     <nav class="content-links__social">
