feat: limpar campo de texto do form após enviado

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </main>
         <footer class="hidden rodape">
             <p>© Todos os direitos reservados
-                Desenvolvido por Yuri V.</p>
+                Desenvolvido por <strong>Yuri V.</strong></p>
         </footer>
     </section>
 
