--- a/sobre.html
+++ b/sobre.html
@@ -33,13 +33,13 @@
         <main class="hidden main">
             <div class="main-sobre">
                 <div class="main-sobre__img">
-                    <img class="hidden main-sobre__foto" src="assets/foto-pessoal.jpeg" alt="Foto minha">
+                    <img class="hidden main-sobre__foto" src="assets/foto-curriculo.jpeg" alt="Foto minha">
                 </div>
                 <div>
                     <h2 class="main-sobre__subtitle text">Sobre mim</h2>
                     <h1 class="main-sobre__title">Transformando ideias em 
                         <strong>experiências digitais</strong></h1>
-                    <p class="main-sobre__descricao text">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes — sempre pensando na melhor experiência possível para quem navega.</p>
+                    <p class="main-sobre__descricao text">Sou estudante de Engenharia de Software com paixão por criar sites interativos, responsivos e centrados no usuário. Meu foco é transformar conceitos em interfaces funcionais, intuitivas e visualmente envolventes sempre pensando na melhor experiência possível para quem navega.</p>
                 </div>
             </div>
             
@@ -140,8 +140,8 @@
                         </a>
                     </nav>
                 </div>
-            <p>© Todos os direitos reservados
-                Desenvolvido por Yuri V.</p>
+           <p>© Todos os direitos reservados
+                Desenvolvido por <strong>Yuri V.</strong></p>
         </footer>
     </section>
 
