--- a/contato.html
+++ b/contato.html
@@ -91,11 +91,11 @@
                         </a>
                     </nav>
                 </div>
-            <p>© Todos os direitos reservados
-                Desenvolvido por Yuri V.</p>
+           <p>© Todos os direitos reservados
+                Desenvolvido por <strong>Yuri V.</strong></p>
         </footer>
     </section>
 
-    <script type="module" src="scripts/sobre.js"></script>
+    <script type="module" src="scripts/contato.js"></script>
 </body>
 </html>
