feat: finalizar portfólio

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Yuri V. | Desenvolvedor Front-End</title>
 </head>
+
 <body>
     <section class="caixa">
         <header class="cabecalho">
@@ -21,7 +23,6 @@
                     <a class="cabecalho-navegacao__list--link" href="sobre.html">
                         <li class="navegacao__list--item">Sobre</li>
                     </a>
-                    <li class="navegacao__list--item">Projetos</li>
                     <a class="cabecalho-navegacao__list--link" href="contato.html">
                         <li class="navegacao__list--item">Contato</li>
                     </a>
@@ -42,18 +43,20 @@
                 </div>
                 <div class="content-links">
                     <nav class="content-links__social">
-                        <div class="content-links__social--info">
-                            <a href="https://github.com/Yuric-Viana" target="_blank">
-                                <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
-                            </a>
-                            <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
-                                <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
-                            </a>
-                        </div>
+                        <a href="https://github.com/Yuric-Viana" target="_blank">
+                            <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg"
+                                alt="Imagem do GitHub" class="content-links__social--item">
+                        </a>
+                        <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
+                            <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail"
+                                class="content-links__social--item">
+                        </a>
                         <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
-                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
+                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg"
+                                alt="Imagem do linkedin" class="content-links__social--item">
                         </a>
                     </nav>
+
                 </div>
             </div>
             <div class="content-img">
@@ -69,4 +72,5 @@
 
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
