--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,6 @@
                     <a class="cabecalho-navegacao__list--link" href="sobre.html">
                         <li class="navegacao__list--item">Sobre</li>
                     </a>
-                    <li class="navegacao__list--item">Projetos</li>
                     <a class="cabecalho-navegacao__list--link" href="contato.html">
                         <li class="navegacao__list--item">Contato</li>
                     </a>
@@ -97,6 +96,9 @@
                         </div>
                         <div class="skills__icons--content">
                             <p class="skills__icons--item"><img class="skills__icons--img" src="assets/icons8-visual-studio.svg" alt="Icone Vs code">VS Code</p>
+                        </div>
+                        <div class="skills__icons--content">
+                            <p class="skills__icons--item"><img class="skills__icons--img github" src="assets/icons8-github.svg" alt="Icone Vs code">GitHub</p>
                         </div>
                     </div>
                 </div>
