--- a/contato.html
+++ b/contato.html
@@ -95,6 +95,6 @@
         </footer>
     </section>
 
-    <script type="module" src="scripts/contato.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
