--- a/contato.html
+++ b/contato.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Yuri V. | Desenvolvedor Front-End</title>
 </head>
+
 <body>
-     <section class="caixa">
+    <section class="caixa">
         <header class="cabecalho">
             <div class="cabecalho-top">
                 <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
-                <a class="cabecalho-top__link" href="index.html">
+                <a class="cabecalho-top__link cabecalho-navegacao__list--link" href="index.html">
                     <h2 class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
                 </a>
                 <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
@@ -20,6 +22,9 @@
                 <ul class="cabecalho-navegacao__list">
                     <a class="cabecalho-navegacao__list--link" href="sobre.html">
                         <li class="navegacao__list--item">Sobre</li>
+                    </a>
+                    <a class="cabecalho-navegacao__list--link" href="certificados.html">
+                        <li class="navegacao__list--item">Certificados</li>
                     </a>
                     <a class="cabecalho-navegacao__list--link" href="contato.html">
                         <li class="navegacao__list--item">Contato</li>
@@ -35,15 +40,19 @@
                     <p>Transformo ideias em experiências digitais incríveis!</p>
                     <br>
                     <p>
-                        Com foco em <strong>desenvolvimento front-end</strong>, crio interfaces modernas, funcionais e com <strong>design responsivo</strong> que oferecem uma navegação fluida e intuitiva.
+                        Com foco em <strong>desenvolvimento front-end</strong>, crio interfaces modernas, funcionais e
+                        com <strong>design responsivo</strong> que oferecem uma navegação fluida e intuitiva.
                     </p>
                     <br>
                     <p>
-                        Seja um portfólio profissional, uma landing page impactante ou um site institucional completo, seu projeto será desenvolvido com atenção aos detalhes e alinhado às melhores práticas da web.
+                        Seja um portfólio profissional, uma landing page impactante ou um site institucional completo,
+                        seu projeto será desenvolvido com atenção aos detalhes e alinhado às melhores práticas da web.
                     </p>
                     <br>
                     <p>
-                        Esqueça os modelos prontos e limitados! <strong>Cada projeto que desenvolvo é único</strong>, pensado para refletir a identidade da sua marca e alcançar os seus objetivos com eficiência e estilo.
+                        Esqueça os modelos prontos e limitados! <strong>Cada projeto que desenvolvo é único</strong>,
+                        pensado para refletir a identidade da sua marca e alcançar os seus objetivos com eficiência e
+                        estilo.
                     </p>
                     <br>
                     <p>
@@ -56,45 +65,54 @@
                     <form id="form" action="https://formsubmit.co/ycviana.dev@gmail.com" method="POST">
                         <div class="contato-form__item">
                             <label for="name">Nome *</label>
-                            <input class="contato-form__item--text" type="text" name="name" id="name" placeholder="Coloque seu nome aqui" required>
+                            <input class="contato-form__item--text" type="text" name="name" id="name"
+                                placeholder="Coloque seu nome aqui" required>
                         </div>
                         <div class="contato-form__item">
                             <label for="email">E-mail *</label>
-                            <input class="contato-form__item--text" type="email" name="email" placeholder="example@domain.com" required>
+                            <input class="contato-form__item--text" type="email" name="email"
+                                placeholder="example@domain.com" required>
                         </div>
                         <div class="contato-form__item">
                             <label for="wpp">WhatsApp *</label>
-                            <input class="contato-form__item--text" type="text" name="number" placeholder="(00) 00000-0000" required>
+                            <input class="contato-form__item--text" type="text" name="number"
+                                placeholder="(00) 00000-0000" required>
                         </div>
                         <div class="contato-form__item">
                             <label for="mensagem">Mensagem *</label>
-                            <textarea rows="5" class="contato-form__item--text" name="mensagem" id="mensagem" placeholder="Olá, tudo bem? Gostaria de um orçamento..." required></textarea>
+                            <textarea rows="5" class="contato-form__item--text" name="mensagem" id="mensagem"
+                                placeholder="Olá, tudo bem? Gostaria de um orçamento..." required></textarea>
                         </div>
-                        <button id="botao-enviar" type="submit">Enviar <img class="contato-form__button" src="assets/icons8-clique-do-mouse.svg" alt="Clique aqui"></button>
+                        <button id="botao-enviar" type="submit">Enviar <img class="contato-form__button"
+                                src="assets/icons8-clique-do-mouse.svg" alt="Clique aqui"></button>
                     </form>
                 </div>
             </div>
         </main>
-        
+
         <footer class="hidden rodape">
-             <div class="rodape-links">
-                    <nav class="rodape-links__social">
-                        <a href="https://github.com/Yuric-Viana" target="_blank">
-                            <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg" alt="Imagem do GitHub" class="content-links__social--item">
-                        </a>
-                        <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
-                            <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail" class="content-links__social--item">
-                        </a>
-                        <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
-                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin" class="content-links__social--item">
-                        </a>
-                    </nav>
-                </div>
-           <p>© Todos os direitos reservados
+            <div class="rodape-links">
+                <nav class="rodape-links__social">
+                    <a href="https://github.com/Yuric-Viana" target="_blank">
+                        <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg"
+                            alt="Imagem do GitHub" class="content-links__social--item">
+                    </a>
+                    <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
+                        <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail"
+                            class="content-links__social--item">
+                    </a>
+                    <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
+                        <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg" alt="Imagem do linkedin"
+                            class="content-links__social--item">
+                    </a>
+                </nav>
+            </div>
+            <p>© Todos os direitos reservados
                 Desenvolvido por <strong>Yuri V.</strong></p>
         </footer>
     </section>
 
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
