--- a/index.html
+++ b/index.html
@@ -10,64 +10,67 @@
 
 <body>
     <section class="caixa">
-        <header class="cabecalho">
-            <div class="cabecalho-top">
-                <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
-                <a class="cabecalho-top__link" href="">
-                    <h2 class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
-                </a>
-                <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
-            </div>
-            <nav class="cabecalho-navegacao">
-                <ul class="cabecalho-navegacao__list">
-                    <a class="cabecalho-navegacao__list--link" href="sobre.html">
-                        <li class="navegacao__list--item">Sobre</li>
+        <div class="effect">
+            <header class="cabecalho">
+                <div class="cabecalho-top">
+                    <img class="cabecalho-top__menu" src="assets/icons8-cardápio.svg" alt="Menu hamburguer">
+                    <a class="cabecalho-top__link cabecalho-navegacao__list--link" href="index.html">
+                        <h2 id="title-cabecalho" class="cabecalho-top__title">Dev<strong>Orange</strong></h2>
                     </a>
-                    <a class="cabecalho-navegacao__list--link" href="contato.html">
-                        <li class="navegacao__list--item">Contato</li>
-                    </a>
-                </ul>
-            </nav>
-            <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
-        </header>
-
-        <main class="hidden content">
-            <div class="content-apresentacao">
-                <div class="content-apresentacao__text">
-                    <p class="content-apresentacao__mobile apresentacao__text--paragrafo">- Olá</p>
-                    <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
-                    <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
-                    <a href="sobre.html">
-                        <button class="apresentacao__text--buttton">Saiba mais</button>
-                    </a>
+                    <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
                 </div>
-                <div class="content-links">
-                    <nav class="content-links__social">
-                        <a href="https://github.com/Yuric-Viana" target="_blank">
-                            <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg"
-                                alt="Imagem do GitHub" class="content-links__social--item">
+                <nav class="cabecalho-navegacao">
+                    <ul class="cabecalho-navegacao__list">
+                        <a class="cabecalho-navegacao__list--link" href="sobre.html">
+                            <li class="navegacao__list--item">Sobre</li>
                         </a>
-                        <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
-                            <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail"
-                                class="content-links__social--item">
+                        <a class="cabecalho-navegacao__list--link" href="certificados.html">
+                            <li class="navegacao__list--item">Certificados</li>
                         </a>
-                        <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
-                            <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg"
-                                alt="Imagem do linkedin" class="content-links__social--item">
+                        <a class="cabecalho-navegacao__list--link" href="contato.html">
+                            <li class="navegacao__list--item">Contato</li>
                         </a>
-                    </nav>
-
+                    </ul>
+                </nav>
+                <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
+            </header>
+            <main class="hidden content">
+                <div class="content-apresentacao">
+                    <div class="content-apresentacao__text">
+                        <p class="content-apresentacao__mobile apresentacao__text--paragrafo">- Olá</p>
+                        <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
+                        <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
+                        <a href="sobre.html">
+                            <button class="apresentacao__text--buttton">Saiba mais</button>
+                        </a>
+                    </div>
+                    <div class="content-links">
+                        <nav class="content-links__social">
+                            <a href="https://github.com/Yuric-Viana" target="_blank">
+                                <img class="links__social--img" src="assets/github-icon-1-logo-svgrepo-com.svg"
+                                    alt="Imagem do GitHub" class="content-links__social--item">
+                            </a>
+                            <a href="mailto:yuricardosoviana@gmail.com" target="_blank">
+                                <img class="links__social--img" src="assets/icons8-gmail.svg" alt="Imagem do gmail"
+                                    class="content-links__social--item">
+                            </a>
+                            <a href="https://www.linkedin.com/in/yuri-viana-2a7468357/" target="_blank">
+                                <img class="links__social--img" src="assets/linkedin-svgrepo-com.svg"
+                                    alt="Imagem do linkedin" class="content-links__social--item">
+                            </a>
+                        </nav>
+                    </div>
                 </div>
-            </div>
-            <div class="content-img">
-                <img class="content-img__cubo" src="assets/icons8-cubo-50.png" alt="Cubo">
-                <img class="content-img__icon" src="assets/eu-icone-removebg-preview.png" alt="Eu em ícone">
-            </div>
-        </main>
-        <footer class="hidden rodape">
-            <p>© Todos os direitos reservados
-                Desenvolvido por <strong>Yuri V.</strong></p>
-        </footer>
+                <div class="content-img">
+                    <img class="content-img__cubo" src="assets/icons8-cubo-50.png" alt="Cubo">
+                    <img class="content-img__icon" src="assets/eu-icone-removebg-preview.png" alt="Eu em ícone">
+                </div>
+            </main>
+            <footer class="hidden rodape">
+                <p>© Todos os direitos reservados
+                    Desenvolvido por <strong>Yuri V.</strong></p>
+            </footer>
+        </div>
     </section>
 
     <script type="module" src="script.js"></script>
