--- a/sobre.html
+++ b/sobre.html
@@ -18,19 +18,28 @@
                 </a>
                 <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
             </div>
-            <nav class="cabecalho-navegacao">
-                <ul class="cabecalho-navegacao__list">
-                    <a class="cabecalho-navegacao__list--link" href="sobre.html">
-                        <li class="navegacao__list--item">Sobre</li>
-                    </a>
-                    <a class="cabecalho-navegacao__list--link" href="certificados.html">
-                        <li class="navegacao__list--item">Certificados</li>
-                    </a>
-                    <a class="cabecalho-navegacao__list--link" href="contato.html">
-                        <li class="navegacao__list--item">Contato</li>
-                    </a>
-                </ul>
-            </nav>
+             <nav class="cabecalho-navegacao">
+                    <ul class="cabecalho-navegacao__list">
+                        <a class="cabecalho-navegacao__list--link" href="sobre.html">
+                            <li class="maleta navegacao__list--item">
+                                <img class="list--item__maleta" src="assets/maleta-de-negocios-branca-transparente.png" alt="Pasta">
+                                <p class="list--item__text">Sobre</p>
+                            </li>
+                        </a>
+                        <a class="cabecalho-navegacao__list--link" href="certificados.html">
+                            <li class="diploma navegacao__list--item">
+                                <img class="list--item__diploma" src="assets/diploma-branco-removebg-preview.png" alt="Diplomas">
+                                <p class="list--item__certificado">Certificados</p>
+                            </li>
+                        </a>
+                        <a class="cabecalho-navegacao__list--link" href="contato.html">
+                            <li class="contato--text navegacao__list--item">
+                                <img class="list--item__contato" src="assets/contato-boneco-branco-removebg-preview.png" alt="Contato">
+                                <p class="list--item__contato--text">Contato </p>
+                            </li>
+                        </a>
+                    </ul>
+                </nav>
             <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
         </header>
 
@@ -146,6 +155,23 @@
                     </div>
                 </div>
             </div>
+            <div class="main-sugestoes">
+                <form class="main-sugestoes__form">
+                    <div id="envio">
+                        <input class="main-sugestoes__input" type="text" placeholder="Sugestões de projetos, melhorias ou recursos?">
+                        <button class="main-sugestoes__btn">Enviar</button>
+                    </div>
+                </form>
+
+                <ul class="main-sugestoes__list">
+                    <!-- <li class="sugestoes__list--item">
+                        <p>Sugiro estudar TP</p>
+                        <span class="list--item__icons">
+                            <img id="delete" src="assets/delete.png" alt="Deletar sugestão">
+                            <img src="assets/edit.png" alt="Editar sugestão">
+                        </span>
+                    </li> -->
+                </ul>
         </main>
 
         <footer class="hidden rodape">
