--- a/contato.html
+++ b/contato.html
@@ -18,19 +18,28 @@
                 </a>
                 <img class="cabecalho-top__emoji" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
             </div>
-            <nav class="cabecalho-navegacao">
-                <ul class="cabecalho-navegacao__list">
-                    <a class="cabecalho-navegacao__list--link" href="sobre.html">
-                        <li class="navegacao__list--item">Sobre</li>
-                    </a>
-                    <a class="cabecalho-navegacao__list--link" href="certificados.html">
-                        <li class="navegacao__list--item">Certificados</li>
-                    </a>
-                    <a class="cabecalho-navegacao__list--link" href="contato.html">
-                        <li class="navegacao__list--item">Contato</li>
-                    </a>
-                </ul>
-            </nav>
+             <nav class="cabecalho-navegacao">
+                    <ul class="cabecalho-navegacao__list">
+                        <a class="cabecalho-navegacao__list--link" href="sobre.html">
+                            <li class="maleta navegacao__list--item">
+                                <img class="list--item__maleta" src="assets/maleta-de-negocios-branca-transparente.png" alt="Pasta">
+                                <p class="list--item__text">Sobre</p>
+                            </li>
+                        </a>
+                        <a class="cabecalho-navegacao__list--link" href="certificados.html">
+                            <li class="diploma navegacao__list--item">
+                                <img class="list--item__diploma" src="assets/diploma-branco-removebg-preview.png" alt="Diplomas">
+                                <p class="list--item__certificado">Certificados</p>
+                            </li>
+                        </a>
+                        <a class="cabecalho-navegacao__list--link" href="contato.html">
+                            <li class="contato--text navegacao__list--item">
+                                <img class="list--item__contato" src="assets/contato-boneco-branco-removebg-preview.png" alt="Contato">
+                                <p class="list--item__contato--text">Contato </p>
+                            </li>
+                        </a>
+                    </ul>
+                </nav>
             <img id="hidden" src="assets/rosto-emoji.svg" alt="Emoji de rosto">
         </header>
 
