fix: corrigir input da página 'sobre'

--- a/sobre.html
+++ b/sobre.html
@@ -158,7 +158,7 @@
             <div class="main-sugestoes">
                 <form class="main-sugestoes__form">
                     <div id="envio">
-                        <input class="main-sugestoes__input" type="text" placeholder="Sugestões de projetos, melhorias ou recursos?">
+                        <textarea name="sugetões" class="main-sugestoes__text--area" placeholder="Sugestões de projetos, melhorias ou recursos?"></textarea>
                         <button class="main-sugestoes__btn">Enviar</button>
                     </div>
                 </form>
