feat: adicionar funcionalidades ao ícone de deletar e editar da lista de sugestões

--- a/sobre.html
+++ b/sobre.html
@@ -168,7 +168,7 @@
                         <p>Sugiro estudar TP</p>
                         <span class="list--item__icons">
                             <img id="delete" src="assets/delete.png" alt="Deletar sugestão">
-                            <img src="assets/edit.png" alt="Editar sugestão">
+                            <img id="edite" src="assets/edit.png" alt="Editar sugestão">
                         </span>
                     </li> -->
                 </ul>
