feat: atualizar redirecionamentp de página no botão 'saiba mais' na home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <p class="content-apresentacao__mobile apresentacao__text--paragrafo">- Olá</p>
                         <h1 class="apresentacao__text--title">Eu sou o Yuri Viana</h1>
                         <p class="apresentacao__text--paragrafo">Desenvolvedor front-end focado em UX.</p>
-                        <a href="sobre.html">
+                        <a class="apresentacao__text--link" href="sobre.html">
                             <button class="apresentacao__text--buttton">Saiba mais</button>
                         </a>
                     </div>
