--- a/sobre.html
+++ b/sobre.html
@@ -163,15 +163,8 @@
                     </div>
                 </form>
 
-                <ul class="main-sugestoes__list">
-                    <!-- <li class="sugestoes__list--item">
-                        <p>Sugiro estudar TP</p>
-                        <span class="list--item__icons">
-                            <img id="delete" src="assets/delete.png" alt="Deletar sugestão">
-                            <img id="edite" src="assets/edit.png" alt="Editar sugestão">
-                        </span>
-                    </li> -->
-                </ul>
+                <ul class="main-sugestoes__list"></ul>
+            </div>    
         </main>
 
         <footer class="hidden rodape">
